# rusty-crusty

./: .gitignore  README.md
01-cli-basics/: Cargo.toml
01-cli-basics/src/: main.rs
02-guessing-game/: Cargo.toml
02-guessing-game/src/: main.rs
03-structs-and-methods/: Cargo.toml
03-structs-and-methods/src/: main.rs
04-enums-and-matching/: Cargo.toml
04-enums-and-matching/src/: main.rs
05-file-processing/: Cargo.toml
05-file-processing/src/: main.rs
06-traits-and-generics/: Cargo.toml
06-traits-and-generics/src/: main.rs
07-concurrency/: Cargo.toml
07-concurrency/src/: main.rs
08-smart-pointers/: Cargo.toml
08-smart-pointers/src/: main.rs
09-async-await/: Cargo.toml
09-async-await/src/: main.rs
10-web-server/: Cargo.toml
10-web-server/src/: main.rs
11-api-iaas/: Cargo.toml  README.md
11-api-iaas/src/: main.rs
11-api-iaas/src/application/: dto.rs  mod.rs  ports.rs  service.rs
11-api-iaas/src/domain/: entities.rs  mod.rs  repository.rs
11-api-iaas/src/infrastructure/persistence/: mod.rs
11-api-iaas/src/infrastructure/web/: dto.rs  handlers.rs  mappings.rs  mod.rs  security.rs
