[package]
name = "api-iaas"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
async-trait = "0.1"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"

